updated vs code settings file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\mljoh\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
+    "python.pythonPath": "C:\\Users\\mljoh\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
+    "workbench.preferredDarkColorTheme": "Monokai Pro",
+    "workbench.colorTheme": "Monokai Pro"
 }
