Revert "updated vs code settings file"
This reverts commit 2e6c8effda4a309ee8a419e5f5879d11102499b4.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\mljoh\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
-    "workbench.preferredDarkColorTheme": "Monokai Pro",
-    "workbench.colorTheme": "Monokai Pro"
+    "python.pythonPath": "C:\\Users\\mljoh\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
 }
