making more extensible with oop. keeping old main for reference

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.pythonPath": "C:\\Users\\mljoh\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
-    "workbench.colorTheme": "PyCharm Dark Theme"
+    "workbench.colorTheme": "Sublime Monokai Adaptive"
 }
